<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interactuar</string>
    <string name="action_settings">Settings</string>
    <string name="btn_navegador">Navegador</string>
    <string name="btn_mapa">Ubicación en mapa</string>
    <string name="btn_email">Enviar email</string>
    <string name="btn_sms">Enviar sms</string>
    <string name="btn_foto">Tomar fotografia</string>

</resources>