<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/navegador"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_navegador"
        android:onClick="navegador" />

    <Button
        android:id="@+id/mapa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mapa"
        android:onClick="mapa" />

    <Button
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_email"
        android:onClick="email" />

    <Button
        android:id="@+id/sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sms"
        android:onClick="sms" />

    <Button
        android:id="@+id/foto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_foto"
        android:onClick="foto" />

</LinearLayout>